Fixed card spacing error by deleting fixed margin moves and reorganized spacing using grid-column-gap to create separation between cards

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #grid-container{
     display: grid;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     grid-template-areas: 
@@ -86,8 +86,8 @@
     
 }
 .button-container-buttons{
-    width: 100px;
-    height: 30px;
+    width: 120px;
+    height: 40px;
     border-radius: 18px;
     font-size: 15px;
     font-weight: 900;
@@ -99,43 +99,45 @@
     grid-area: content-grid-container;
     background-color: rgb(227, 232, 241);
     display: grid;
-    grid-template-rows: 50px, repeat(11, 1fr);
+    width: 100%;
+    grid-template-rows: repeat(12, 1fr);
     grid-template-columns: repeat(3, 1fr);
     grid-template-areas: 
     "left-card-title . right-card-title"
     "card-1 card-4 card-7"
     "card-1 card-4 card-7" 
     "card-1 card-4 card-7" 
-    " .     .      card-7" 
+    ". . card-7"
     "card-2 card-5 card-7"
-    "card-2 card-5 .     "
+    "card-2 card-5 card-8-title"
     "card-2 card-5 card-8"
-    " .     .      card-8" 
+    ". . card-8"
     "card-3 card-6 card-8"
     "card-3 card-6 card-8"
     "card-3 card-6 card-8"
-   
-
     ;
+
+    grid-column-gap: 20px;
+    padding: 20px;
 }
 
 .cards{
-    margin: 5px 30px;
-    padding: 30px;
+    margin: 10px;
+    padding: 10px;
     border: black solid 1px;
     border-left: goldenrod solid 10px;
     box-shadow: rgba(211, 206, 206, 0.774) 0px 3px;
     background-color: white;
+    border-radius: 20px;
+    
 }
 
 #left-card-title {
     grid-area: left-card-title;
-    margin-left: 30px;
 }
 
 #right-card-title{
     grid-area: right-card-title;
-    margin-left:30px;
 }
 
 #card-1{ 
@@ -144,6 +146,7 @@
 
 #card-2{ 
     grid-area: card-2;
+    
 }
 
 #card-3{ 
@@ -156,6 +159,7 @@
 
 #card-5{ 
     grid-area: card-5;
+    
 }
 
 #card-6{ 
@@ -164,8 +168,17 @@
 
 #card-7{ 
     grid-area: card-7;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+   
 }
 
 #card-8{ 
     grid-area: card-8;
+    
+}
+
+#card-8-title{
+    grid-area: card-8-title;
 }
